kubernetes/infrastructure/authentik/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik-route
  namespace: authentik
spec:
  parentRefs:
    - name: shared-gateway
      namespace: kube-system
  hostnames:
    - "auth.tyrongabriel.com"
  rules:
    - backendRefs:
        - name: authentik-server
          port: 80
